--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,34 @@
-<div class="d-flex justify-content-between align-items-center p-3">
-	<div class="flex-centering-vertical" id="takeBreak">
-		<i class="d-block fa fa-coffee fa-3x mx-3"></i>
-		<span class="mt-2 small text-muted">Schedule Breaks !</span>
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-12 col-sm-6 col-md-3 mt-3 flex-centering-vertical">
+			<div class="flex-centering-vertical" id="takeBreak">
+				<i class="d-block fa fa-coffee fa-3x mx-3"></i>
+				<span class="mt-2 small text-muted">Schedule Breaks !</span>
+			</div>
+		</div>
+		<div class="col-12 col-sm-6 col-md-3 mt-3 flex-centering-vertical">
+			<div class="flex-centering-vertical" id="takeTimer">
+				<i class="d-block fa fa-hourglass-end fa-3x mx-3"></i>
+				<span class="mt-2 small text-muted">Timer</span>
+			</div>
+		</div>
+		<div class="col-12 col-sm-6 col-md-3 mt-3 flex-centering-vertical">
+			<div class="flex-centering-vertical" id="takeTimer">
+				<i class="d-block fa fa-hourglass-end fa-3x mx-3"></i>
+				<span class="mt-2 small text-muted">Count Down</span>
+			</div>
+		</div>
+		<div class="col-12 col-sm-6 col-md-3 my-3 flex-centering-vertical">
+			<div class="flex-centering-vertical" id="takeTimer">
+				<i class="d-block fa fa-hourglass-end fa-3x mx-3"></i>
+				<span class="mt-2 small text-muted">Tools</span>
+			</div>
+		</div>
 	</div>
+</div>
 
-	<div class="flex-centering-vertical ml-5" id="takeTimer">
-		<i class="d-block fa fa-hourglass-end fa-3x mx-3"></i>
-		<span class="mt-2 small text-muted">Set Time !</span>
-	</div>
+<!-- <div class="d-flex justify-content-between align-items-center p-3">
+
 
 </div>
+ -->
